log/build_2023-02-13_20-46-17/dofsensor/stderr.log
  File "C:\dev\robotic_hw\install\Lib\site-packages\dofsensor\server.py", line 24
    self.get_logger().info('Incoming request\nnumsamples: %d '' % (request.numsamples))
                                                                                      ^
SyntaxError: EOL while scanning string literal

